# prog_algo_S2

./: README.md
TD01/src/: fraction.cpp  fraction.hpp  main.cpp
TD02/src/: main.cpp  tri.cpp  tri.hpp
TD03/src/: main.cpp  npi.cpp  npi.hpp
TD04/: CMakeLists.txt
TD04/src/: ex_01.cpp  ex_02.cpp  ex_03.cpp
TD05/: CMakeLists.txt
TD05/src/: ex_01.cpp  ex_02.cpp  ex_03.cpp
TD06/src/: main.cpp  node.cpp  node.hpp
TD07/src/: main.cpp
